Added comment on why we do DB.
git-svn-id: https://svn.wehi.edu.au/svn/repos/SmythLab/ALun/csaw@2488 3f7291af-367f-0410-92d8-b778034d9185

--- a/userguide/comments.Rnw
+++ b/userguide/comments.Rnw
@@ -38,6 +38,17 @@ require(edgeR)
 
 \begin{document}
 
+\subsection*{General comments on DB}
+
+Looking for DB is more relevant, as you get changes in binding that you can associate with differences in biology (so you can start poking around at mechanisms). 
+It's also easier than looking for absolute binding, as the null hypothesis is well defined.
+You don't need to construct a background model, as you would do in single-sample peak calling.
+You don't need to compare to a negative control, as you would do in two-sample peak calling.
+In particular, comparisons to input are not like-for-like, as you miss IP-specific biases when you skip the IP.
+This shows up as reproducible differences in the TapeStation profiles (recall Alikesei's H3K27me3 data) and manifests most clearly in coverage across repeat regions where biases are amplified, e.g., mitochondria.
+While the worst offenders can easily be filtered out, the real problem is where the biases are subtle such that they confound the actual differences.
+IgG's are better but they face a conundrum in that they are harder to generate as your IP procedure improves, i.e., becomes cleaner.
+
 \subsection*{Comments on counting}
 
 \subsubsection*{Fragment length}
