--- a/userguide/csaw.Rnw
+++ b/userguide/csaw.Rnw
@@ -50,7 +50,7 @@
 % Set to change date for document, not compile date.
 \date{First edition 15 August 2012\\
 \vspace{6pt}
-Last revised 25 April 2015}
+Last revised 30 April 2015}
 
 % Removing the bibliography title so it shows up in the contents.
 \makeatletter
@@ -1810,6 +1810,16 @@ test$score <- -10*log10(tabcom$FDR[is.sig])
 names(test) <- paste0("region", 1:sum(is.sig))
 export(test, "clusters.bed")
 head(read.table("clusters.bed"))
+@
+
+Another useful format is to store the results as a \code{GRanges} object.
+Statistics are stored in the various metadata fields, which is convenient as it synchronizes the subsetting of statistics and genomic coordinates.
+This object can also be saved to file and reloaded later for direct manipulation in the R environment, e.g., to find overlaps with other regions of interest.
+
+<<>>=
+output.ranges <- merged$region
+elementMetadata(output.ranges) <- tabcom
+saveRDS(output.ranges, "ranges.rds")
 @
 
 \section{Simple visualization of genomic coverage}
